# e4stream

./: LICENSE  README.md  pyproject.toml
src/e4stream/: client.py  config.py  messages.py
tests/: test_e4client.py  test_e4stream.py
